Added new images

--- a/company.html
+++ b/company.html
@@ -173,7 +173,7 @@
 
 					<div class="about-image">
 
-						<img src="assets/img/about.jpg" alt="About image">
+						<img src="assets/img/b-02.jpg" alt="About image">
 
 					</div>
 
