--- a/contact.html
+++ b/contact.html
@@ -193,12 +193,6 @@
 
 									</div>
 
-									<div class="contact-info-bg-icon">
-
-										<i class="pe-7s-map-marker"></i>
-
-									</div>
-
 								</div>
 
 							</div>
@@ -211,13 +205,9 @@
 
 										<h6>Phone:</h6>
 
-										<p>(855) 979-MEGA (6342)</p>
-
-									</div>
-
-									<div class="contact-info-bg-icon">
-
-										<i class="pe-7s-call"></i>
+										<p>
+											<a href="tel:8559796342">(855) 979-MEGA (6342)</a>
+										</p>
 
 									</div>
 
@@ -233,14 +223,12 @@
 
 										<h6>Email:</h6>
 
-										<p>sales@megapipelines.com</p>
-										<p>support@megapipelines.com</p>
-
-									</div>
-
-									<div class="contact-info-bg-icon">
-
-										<i class="pe-7s-mail"></i>
+										<p>
+											<a href="mailto:sales@megapipelines.com">sales@megapipelines.com</a>
+										</p>
+										<p>
+											<a href="mailto:support@megapipelines.com">support@megapipelines.com</a>
+										</p>
 
 									</div>
 
