--- a/home-services.html
+++ b/home-services.html
@@ -149,23 +149,26 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-center">
+				<div class="row align-items-top">
 
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-5 col-md-12 col-sm-12">
 
 						<div class="services-step-image">
-
-							<img src="assets/img/services-details/services-details-1.jpg" alt="image">
-
-						</div>
-
-						<div class="services-step-wrapper">
 
 							<div class="services-step-title">
 
 								<h2>Unlimited Home Services Leads from Mega Pipelines for a Fixed Low Monthly Price</h2>
 
 							</div>
+
+							<img src="assets/img/b-07.jpg" alt="image">
+
+						</div>
+
+					</div>
+
+					<div class="col-lg-7 col-md-12 col-sm-12">
+						<div class="services-step-wrapper">
 
 							<div class="services-step-content">
 
@@ -195,7 +198,6 @@
 							</div>
 
 						</div>
-
 					</div>
 
 				</div>
