--- a/personal-loan.html
+++ b/personal-loan.html
@@ -149,17 +149,11 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-center">
+				<div class="row align-items-top">
 
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-5 col-md-12 col-sm-12">
 
 						<div class="services-step-image">
-
-							<img src="assets/img/services-details/services-details-1.jpg" alt="image">
-
-						</div>
-
-						<div class="services-step-wrapper">
 
 							<div class="services-step-title">
 
@@ -167,31 +161,39 @@
 
 							</div>
 
-							<div class="services-step-content">
+							<img src="assets/img/b-06.jpg" alt="image">
 
-								<p><b>Filter through our leads in the markets you want to earn business, and begin immediately winning personal loan customers through Mega Pipelines.</b></p>
+						</div>
 
-								<div class="features-text">
+					</div>
 
-									<p>Through the Mega Pipelines platform, we enable you, or you and your team to filter through, and call our data verified leads via the following factors:</p>
+					<div class="col-lg-7 col-md-12 col-sm-12">
+						<div class="services-step-wrapper">
 
-									<ul style="font-size: 15px;line-height: 1.8;color: #5f5f5f;margin-bottom: 15px;font-weight: 400;list-style: circle;padding-left: 25px;">
-										<li>Requested loan amount</li>
-										<li>State</li>
-										<li>City</li>
-										<li>Total existing debt</li>
-										<li>Estimated credit rating</li>
-										<li>Late payments</li>
-									</ul>
-									<p>There is no more need to buy leads one by one, and worry about if you are adequately staffed for the lead volume when your sales team has access to unlimited leads to call when they want, how they want, and who they want–for one low flat fee.</p>
-									<p>See why hundreds of personal loan professionals are moving their efforts to Mega Pipelines.  If it is high lead data quality, predictable cost, simple set up, and amazing targeting you are seeking, there is no better approach than supplementing your pipeline with Mega Pipelines.</p>
-									<p>Get started today with a free trial, and see just how good is the Mega Pipelines system.</p>
-								</div>
+						<div class="services-step-content">
 
+							<p><b>Filter through our leads in the markets you want to earn business, and begin immediately winning personal loan customers through Mega Pipelines.</b></p>
+
+							<div class="features-text">
+
+								<p>Through the Mega Pipelines platform, we enable you, or you and your team to filter through, and call our data verified leads via the following factors:</p>
+
+								<ul style="font-size: 15px;line-height: 1.8;color: #5f5f5f;margin-bottom: 15px;font-weight: 400;list-style: circle;padding-left: 25px;">
+									<li>Requested loan amount</li>
+									<li>State</li>
+									<li>City</li>
+									<li>Total existing debt</li>
+									<li>Estimated credit rating</li>
+									<li>Late payments</li>
+								</ul>
+								<p>There is no more need to buy leads one by one, and worry about if you are adequately staffed for the lead volume when your sales team has access to unlimited leads to call when they want, how they want, and who they want–for one low flat fee.</p>
+								<p>See why hundreds of personal loan professionals are moving their efforts to Mega Pipelines.  If it is high lead data quality, predictable cost, simple set up, and amazing targeting you are seeking, there is no better approach than supplementing your pipeline with Mega Pipelines.</p>
+								<p>Get started today with a free trial, and see just how good is the Mega Pipelines system.</p>
 							</div>
 
 						</div>
 
+						</div>
 					</div>
 
 				</div>
