--- a/real-estate.html
+++ b/real-estate.html
@@ -149,17 +149,11 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-center">
+				<div class="row align-items-top">
 
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-5 col-md-12 col-sm-12">
 
 						<div class="services-step-image">
-
-							<img src="assets/img/services-details/services-details-1.jpg" alt="image">
-
-						</div>
-
-						<div class="services-step-wrapper">
 
 							<div class="services-step-title">
 
@@ -167,9 +161,18 @@
 
 							</div>
 
+							<img src="assets/img/b-10.jpg" alt="image">
+
+						</div>
+
+					</div>
+
+					<div class="col-lg-7 col-md-12 col-sm-12">
+						<div class="services-step-wrapper">
+
 							<div class="services-step-content">
 
-								<p><b>Filter through our leads in the markets you want to earn business, and begin immediately winning personal loan customers through Mega Pipelines.</b></p>
+								<p><b>Filter through our leads in the markets you want to earn business, and begin immediately winning home services customers through Mega Pipelines.</b></p>
 
 								<div class="features-text">
 
@@ -190,7 +193,6 @@
 							</div>
 
 						</div>
-
 					</div>
 
 				</div>
