--- a/training-support.html
+++ b/training-support.html
@@ -142,6 +142,121 @@
 		</div>
 	</div>
 
+
+	<section class="services-details-area ptb-100">
+
+		<div class="container">
+
+			<div class="services-details-overview">
+
+
+				<div class="row align-items-top">
+
+					<div class="col-lg-5 col-md-12 col-sm-12">
+
+						<div class="services-step-wrapper">
+
+							<div class="services-step-title">
+
+								<h2>Dialer Support Directory</h2>
+
+							</div>
+
+							<div class="services-step-content">
+
+								<p>If you are ready to start setting up your Mega Pipelines account so others can dial the leads on your behalf, we have created a directory of people that may be a good start. Below is a list of people we have interviewed and are highly interested and capable of executing on a calling script and to work on your behalf as Dialers from within your platform.</p>
+
+							</div>
+
+						</div>
+
+					</div>
+
+					<div class="col-lg-7 col-md-12 col-sm-12">
+						<div class="services-step-wrapper">
+
+							<div class="services-step-content">
+								
+								<div class="features-text">
+
+									<table id="support">
+										<tbody>
+											<tr>
+												<td>
+													<span class="dialer-agent">
+														<img src="assets/img/icon.png" alt="image">
+													</span>
+												</td>
+												<td>Cindy Ana Medrano</td>
+												<td>Exp. 7+ Years</td>
+												<td>High Fluency</td>
+												<td>Philippines</td>
+												<td>
+													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<span class="dialer-agent">
+														<img src="assets/img/icon.png" alt="image">
+													</span>
+												</td>
+												<td>Angeli Labang</td>
+												<td>Exp. 7+ Years</td>
+												<td>High Fluency</td>
+												<td>Philippines</td>
+												<td>
+													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<span class="dialer-agent">
+														<img src="assets/img/icon.png" alt="image">
+													</span>
+												</td>
+												<td>Angel Alindato</td>
+												<td>Exp. 7+ Years</td>
+												<td>High Fluency</td>
+												<td>Philippines</td>
+												<td>
+													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+												</td>
+											</tr>
+											<tr>
+												<td>
+													<span class="dialer-agent">
+														<img src="assets/img/icon.png" alt="image">
+													</span>
+												</td>
+												<td>Felipe Bilatan</td>
+												<td>Exp. 7+ Years</td>
+												<td>High Fluency</td>
+												<td>Philippines</td>
+												<td>
+													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+												</td>
+											</tr>
+										</tbody>
+									</table>
+
+									<p>Feel free to reach out to them and interview them to see if they will be a good fit to work with you and your team.</p>
+
+								</div>
+
+							</div>
+
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
+
 	<section class="footer-area section-padding">
 		<div class="container">
 			<div class="row">
