--- a/verification-process.html
+++ b/verification-process.html
@@ -173,17 +173,27 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-center">
+				<div class="row align-items-top">
 
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-5 col-md-12 col-sm-12">
 
-						<div class="services-step-wrapper">
-
+						<div class="about-image">
+							
 							<div class="services-step-title">
 
 								<h2>Lead Verification Process</h2>
 
 							</div>
+
+							<img src="assets/img/b-04.jpg" alt="image">
+
+						</div>
+
+					</div>
+
+					<div class="col-lg-7 col-md-12 col-sm-12">
+
+						<div class="services-step-wrapper">
 
 							<div class="services-step-content">
 
