--- a/best-practices.html
+++ b/best-practices.html
@@ -152,23 +152,28 @@
 
 			<div class="services-details-overview">
 
-				<div class="row align-items-center">
+				<div class="row align-items-top">
 
-					<div class="col-lg-12 col-md-12">
+					<div class="col-lg-5 col-md-12 col-sm-12">
 
-						<div class="services-step-image">
-
-							<img src="assets/img/services-details/services-details-1.jpg" alt="image">
-
-						</div>
-
-						<div class="services-step-wrapper">
-
+						<div class="about-image">
+							
 							<div class="services-step-title">
 
 								<h2>Best Practices</h2>
 
 							</div>
+
+							<img src="assets/img/b-03.jpg" alt="image">
+
+						</div>
+
+					</div>
+
+					<div class="col-lg-7 col-md-12 col-sm-12">
+
+						<div class="services-step-wrapper">
+
 
 							<div class="services-step-content">
 
