--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -142,6 +142,154 @@
 		</div>
 	</div>
 
+	<div class="contact-section section-padding">
+
+		<div class="container">
+
+			<div class="row">
+
+				<div class="col-lg-4 col-md-12">
+
+                    <div class="contact-information-box-3">
+
+						<div class="row">
+
+							<div class="col-lg-12 col-md-12 col-sm-12">
+
+								<div class="single-contact-info-box">
+
+									<div class="contact-info">
+
+										<h6>Address:</h6>
+
+										<p>360 Central Avenue First Central Tower, Suite 800</p>
+
+										<p>St. Petersburg, FL 33701, United States</p>
+
+									</div>
+
+								</div>
+
+							</div>
+
+							<div class="col-lg-12 col-md-12 col-sm-12">
+
+								<div class="single-contact-info-box">
+
+									<div class="contact-info">
+
+										<h6>Phone:</h6>
+
+										<p>
+											<a href="tel:8559796342">(855) 979-MEGA (6342)</a>
+										</p>
+
+									</div>
+
+								</div>
+
+							</div>
+
+							<div class="col-lg-12 col-md-12 col-sm-12">
+
+								<div class="single-contact-info-box">
+
+									<div class="contact-info">
+
+										<h6>Email:</h6>
+
+										<p>
+											<a href="mailto:sales@megapipelines.com">sales@megapipelines.com</a>
+										</p>
+										<p>
+											<a href="mailto:support@megapipelines.com">support@megapipelines.com</a>
+										</p>
+
+									</div>
+
+								</div>
+
+							</div>
+
+						</div>
+
+                    </div>
+
+				</div>
+
+				<div class="col-lg-8 col-md-12">
+
+					<div class="contact-form contact-form-3">
+
+						<p class="form-message"></p>
+
+						<form id="contact-form" class="form" action="phpmail.php" method="POST">
+
+							<div class="row">
+
+								<div class="col-lg-6 col-md-12">
+
+									<div class="form-group">
+
+										<input type="text" name="name" id="name" class="form-control" required placeholder="Your Name"> </div>
+
+								</div>
+
+								<div class="col-lg-6 col-md-12">
+
+									<div class="form-group">
+
+										<input type="email" name="email" id="email" class="form-control" required placeholder="Your Email"> </div>
+
+								</div>
+
+								<div class="col-lg-6 col-md-12">
+
+									<div class="form-group">
+
+										<input type="text" name="phone" id="phone" required class="form-control" placeholder="Your Phone"> </div>
+
+								</div>
+
+								<div class="col-lg-6 col-md-12">
+
+									<div class="form-group">
+
+										<input type="text" name="subject" id="subject" class="form-control" required placeholder="Your Subject"> </div>
+
+								</div>
+
+								<div class="col-lg-12 col-md-12">
+
+									<div class="form-group">
+
+										<textarea name="message" class="form-control" id="message" cols="30" rows="6" required placeholder="Your Message"></textarea>
+
+									</div>
+
+								</div>
+
+								<div class="col-lg-12 col-md-12">
+
+									<button type="submit" class="default-btn">Send Message <span></span></button>
+
+								</div>
+
+							</div>
+
+						</form>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+	
 	<section class="footer-area section-padding">
 		<div class="container">
 			<div class="row">
