--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -148,137 +148,305 @@
 
 			<div class="row">
 
-				<div class="col-lg-4 col-md-12">
-
-                    <div class="contact-information-box-3">
-
-						<div class="row">
-
-							<div class="col-lg-12 col-md-12 col-sm-12">
-
-								<div class="single-contact-info-box">
-
-									<div class="contact-info">
-
-										<h6>Address:</h6>
-
-										<p>360 Central Avenue First Central Tower, Suite 800</p>
-
-										<p>St. Petersburg, FL 33701, United States</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-							<div class="col-lg-12 col-md-12 col-sm-12">
-
-								<div class="single-contact-info-box">
-
-									<div class="contact-info">
-
-										<h6>Phone:</h6>
-
-										<p>
-											<a href="tel:8559796342">(855) 979-MEGA (6342)</a>
-										</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-							<div class="col-lg-12 col-md-12 col-sm-12">
-
-								<div class="single-contact-info-box">
-
-									<div class="contact-info">
-
-										<h6>Email:</h6>
-
-										<p>
-											<a href="mailto:sales@megapipelines.com">sales@megapipelines.com</a>
-										</p>
-										<p>
-											<a href="mailto:support@megapipelines.com">support@megapipelines.com</a>
-										</p>
-
-									</div>
-
-								</div>
-
-							</div>
-
-						</div>
-
-                    </div>
+				<div class="col-lg-6 col-md-12">
+					<div>
+						<h2>ROI Calculator</h2>
+						<p>We came up with this ROI Calculator to help you visualize the impact of implementing a program with Mega Pipelines</p>
+						<p>Enter in the fields in the blue boxes below what your monthly return on investment will be by using.</p>
+						<p>Results vary based on your performance, and subscription costs are subject to change according to the <a target="_blank" href="terms-conditions.html">Terms and Conditions</a>.</p>
+					</div>
 
 				</div>
 
-				<div class="col-lg-8 col-md-12">
+				<div class="col-lg-6 col-md-12">
 
-					<div class="contact-form contact-form-3">
-
-						<p class="form-message"></p>
-
-						<form id="contact-form" class="form" action="phpmail.php" method="POST">
-
-							<div class="row">
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="name" id="name" class="form-control" required placeholder="Your Name"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="email" name="email" id="email" class="form-control" required placeholder="Your Email"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="phone" id="phone" required class="form-control" placeholder="Your Phone"> </div>
-
-								</div>
-
-								<div class="col-lg-6 col-md-12">
-
-									<div class="form-group">
-
-										<input type="text" name="subject" id="subject" class="form-control" required placeholder="Your Subject"> </div>
-
-								</div>
-
-								<div class="col-lg-12 col-md-12">
-
-									<div class="form-group">
-
-										<textarea name="message" class="form-control" id="message" cols="30" rows="6" required placeholder="Your Message"></textarea>
-
-									</div>
-
-								</div>
-
-								<div class="col-lg-12 col-md-12">
-
-									<button type="submit" class="default-btn">Send Message <span></span></button>
-
-								</div>
-
+					<div>
+						<h5>Your Current Commission</h5>
+						<div class="row align-items-center">
+							<div class="col-lg-8">
+								<p>Current Deals Closed Per Month</p>
 							</div>
+							<div class="col-lg-4">
+								<select class="form-control">
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+									<option value="5">5</option>
+									<option value="6">6</option>
+									<option value="7">7</option>
+									<option value="8">8</option>
+									<option value="9">9</option>
+									<option value="10">10</option>
+									<option value="11">11</option>
+									<option value="12">12</option>
+									<option value="13">13</option>
+									<option value="14">14</option>
+									<option value="15">15</option>
+									<option value="16">16</option>
+									<option value="17">17</option>
+									<option value="18">18</option>
+									<option value="19">19</option>
+									<option value="20">20</option>
+								</select>
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-lg-8">
+								<p>Industry You Work</p>
+							</div>
+							<div class="col-lg-4">
+								<select class="form-control">
+									<option value="mortgage">Mortgage</option>
+									<option value="solar">Solar</option>
+									<option value="insurance">Insurance</option>
+									<option value="realestate">Real Estate</option>
+									<option value="personal">Personal Loan</option>
+								</select>
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-lg-8">
+								<p>Your Average Loan Size (if Mortgage)</p>
+							</div>
+							<div class="col-lg-4">
+								<input class="form-control">
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-lg-8">
+								<p>Bps Earned Per Loan (if Mortgage)</p>
+							</div>
+							<div class="col-lg-4">
+								<input class="form-control">
+							</div>
+						</div>
+						<div class="row align-items-center">
+							<div class="col-lg-12">
+								<p>Current Commission before Mega Pipelines</p>
+								<h4>$5,000.00</h4>
+							</div>
+						</div>
+					</div>
 
-						</form>
+					<div>
+						<h5>Mega Pipeline Stats You Expect</h5>
+						<div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Leads You'll Call Per Day</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Monthly Leads Called</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Application Rate of Leads Called</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p># of Monthly Applications</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Application Close Rate</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Incremental Loans per Month</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Hours Calling Support Calls / Day</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Total Monthly Calling Hours</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+										<option value="6">6</option>
+										<option value="7">7</option>
+										<option value="8">8</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Use a 3rd Party Dialer</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="yes">Yes</option>
+										<option value="no">No</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Hourly Caller Cost</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="5.00">$5.00</option>
+										<option value="5.25">$5.25</option>
+										<option value="5.50">$5.50</option>
+										<option value="5.75">$5.75</option>
+										<option value="6.00">$6.00</option>
+										<option value="6.25">$6.25</option>
+										<option value="6.50">$6.50</option>
+										<option value="6.75">$6.75</option>
+										<option value="7.00">$7.00</option>
+										<option value="7.25">$7.25</option>
+										<option value="7.50">$7.50</option>
+										<option value="7.75">$7.75</option>
+										<option value="8.00">$8.00</option>
+										<option value="8.25">$8.25</option>
+										<option value="8.50">$8.50</option>
+										<option value="8.75">$8.75</option>
+										<option value="9.00">$9.00</option>
+										<option value="9.25">$9.25</option>
+										<option value="9.50">$9.50</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Number of Callers dialing for you</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Mega Pipelines Account Type</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="individual">Individual</option>
+										<option value="team">Team</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Mega Pipelines Payment Plan</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="month">Monthly</option>
+										<option value="quart">Quarterly</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Total Calling Cost</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Mega Pipelines Subscription Cost</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-12">
+									<h4>Total Incremental Cost</h4>
+									<h4>$10,260</h4>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Self Generation Commission Rate</p>
+								</div>
+								<div class="col-lg-4">
+									<select class="form-control">
+										<option value="yes">Yes</option>
+										<option value="no">No</option>
+									</select>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Self Generation bps rate</p>
+								</div>
+								<div class="col-lg-4">
+									<input class="form-control">
+								</div>
+							</div>
+						</div>
+					</div>
 
+					<div>
+						<h5>Your New Commission Results</h5>
+						<div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Additional Commission Profited</p>
+								</div>
+								<div class="col-lg-4">
+									<h6 class="formula-result">$5,000.00</h6>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-8">
+									<p>Monthly Return on Investment</p>
+								</div>
+								<div class="col-lg-4">
+									<h6 class="formula-result">$5,000.00</h6>
+								</div>
+							</div>
+							<div class="row align-items-center">
+								<div class="col-lg-12">
+									<p>New Commission after Mega Pipelines</p>
+									<h4>$5,000.00</h4>
+									<p>Ready to make your sales pipeline Mega?</p>
+									<a href="" type="submit" class="default-btn">Try It Free <span></span></a>
+								</div>
+							</div>
+						</div>
+						
 					</div>
 
 				</div>
@@ -289,7 +457,37 @@
 
 	</div>
 
-	
+
+	<section class="hire-section">
+
+		<div class="container">
+
+			<div class="row">
+
+				<div class="col-lg-8 offset-lg-2 col-md-12">
+
+					<div class="hire-content">
+
+						<h2>Have more questions about growing your sales?</h2>
+
+						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+
+						<div class="hire-btn">
+
+							<a class="default-btn-one" href="contact.html">Contact Us <span></span></a>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
+
 	<section class="footer-area section-padding">
 		<div class="container">
 			<div class="row">
