--- a/index.html
+++ b/index.html
@@ -309,33 +309,33 @@
 
 							<li>
 								<span>
-									<a href="" style="color: inherit;" class="active">Mortgage Refinance</a>
+									<a href="mortgage-refinance.html" style="color: inherit;" class="active">Mortgage Refinance</a>
 								</span>
 							</li>
 
 							<li>
 								<span>
-									<a href="" style="color: inherit;">Solar</a>
+									<a href="solar.html" style="color: inherit;">Solar</a>
 								</span>
 							</li>
 							<li>
 								<span>
-									<a href="" style="color: inherit;">Personal Loans</a>
+									<a href="personal-loan.html" style="color: inherit;">Personal Loans</a>
 								</span>
 							</li>
 							<li>
 								<span>
-									<a href="" style="color: inherit;">Real Estate</a>
+									<a href="real-estate.html" style="color: inherit;">Real Estate</a>
 								</span>
 							</li>
 							<li>
 								<span>
-									<a href="" style="color: inherit;">Homeowners Insurance</a>
+									<a href="homeowners-insurance.html" style="color: inherit;">Homeowners Insurance</a>
 								</span>
 							</li>													
 							<li>
 								<span>
-									<a href="" style="color: inherit;">Home Services</a>
+									<a href="home-services.html" style="color: inherit;">Home Services</a>
 								</span>
 							</li>	
 
